--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,12 +1,12 @@
 @font-face {
   font-family: "font-1";
-  src: url(../assets/fonts/JosefinSans-Medium.ttf);
+  src: url(../assets/fonts/AtkinsonHyperlegible-Regular.ttf);
 }
 
 $font-1: "font-1", sans-serif;
 
-$color-1: #61dafb;
-$color-2: salmon;
+$color-1: #fb61f8;
+$color-2: rgb(146, 250, 114);
 $color-3: #282c34;
 $white: rgb(243, 243, 243);
 
