--- a/src/styles/components/_countries.scss
+++ b/src/styles/components/_countries.scss
@@ -1,6 +1,7 @@
 .countries {
   text-align: center;
 
+
   .radio-container {
     justify-content: space-around;
     align-items: center;
@@ -56,5 +57,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-top: 20px;
   }
 }
