--- a/src/styles/components/_countries.scss
+++ b/src/styles/components/_countries.scss
@@ -47,6 +47,7 @@
     border-radius: 10px;
     cursor: pointer;
     transition: 0.2s;
+    margin-top: 20px;
 
     &:hover {
       background: $color-1;
